--- a/templates/Ansible-Tower-QuickStart.template
+++ b/templates/Ansible-Tower-QuickStart.template
@@ -12,6 +12,36 @@
 	    "Type": "String",
 	    "Default": "10.0.0.10"
 	},
+        "AnsibleAdminUser": {
+            "Description" : "Default Ansible Tower Admin User",
+            "Type"        : "String",
+            "MinLength"   : "4",
+            "MaxLength"   : "32",
+            "Default"     : "admin"
+        },
+        "AnsibleAdminPassword": {
+            "Description" : "Password for Ansible Admin Must be at least 8 characters containing letters, numbers and symbols",
+            "Type"        : "String",
+            "MinLength"   : "8",
+            "MaxLength"   : "32",
+            "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
+            "NoEcho"         : "true"
+        },
+       "DatabaseAdminUser": {
+            "Description" : "Database Admin User Name",
+            "Type"        : "String",
+            "MinLength"   : "4",
+            "MaxLength"   : "32",
+            "Default"     : "dbadmin"
+        },
+        "DatabaseAdminPassword": {
+            "Description" : "Password for Database Admin Must be at least 8 characters containing letters, numbers and symbols",
+            "Type"        : "String",
+            "MinLength"   : "8",
+            "MaxLength"   : "32",
+            "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
+            "NoEcho"         : "true"
+        },
 	"AnsibleClientLinuxIP": {
 	    "Description": "IP for the ansible client",
 	    "Type": "String",
@@ -24,7 +54,7 @@
             "AllowedPattern" : "[a-zA-Z0-9]+\\..+"
         },
         "RemoteAdminCIDR" : {
-            "Description" : "CIDR Block or IP for SSH or RDP access",
+            "Description" : "CIDR Block or IP for SSH",
             "Type"        : "String",
             "Default"     : "0.0.0.0/0",
             "AllowedPattern" : "[a-zA-Z0-9]+\\..+"
