corrected Json for Ec2Stack

--- a/templates/Ansible-Tower-Ec2.template
+++ b/templates/Ansible-Tower-Ec2.template
@@ -100,7 +100,7 @@
                                                                 "content": {
                                                                         "Fn::Join": ["", [
                                                                                 "ansible_admin_password|",{ "Ref" : "AnsibleAdminPassword" }, "\n",
-                                                                                "ansible_dbadmin_password|",{ "Ref" : "DatabaseAdminPassword" }, "\n",
+                                                                                "ansible_dbadmin_password|",{ "Ref" : "DatabaseAdminPassword" }, "\n"
                                                                         ]]
                                                                 },
                                                                 "mode": "000400",
