--- a/templates/Ansible-Tower-Ec2.template
+++ b/templates/Ansible-Tower-Ec2.template
@@ -30,6 +30,22 @@
 			"Type": "String",
 			"Default": "172.31.0.11"
 		},
+	        "AnsibleAdminPassword": {
+            	"Description" : "Password for Ansible Admin Must be at least 8 characters containing letters and (minimum 1 capital letter), numbers and symbols",
+                "Type"        : "String",
+                "MinLength"   : "8",
+                "MaxLength"   : "32",
+                "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
+                "NoEcho"         : "true"
+        	},
+       		"DatabaseAdminPassword": {
+            	"Description" : "Password for Ansible Admin Must be at least 8 characters containing letters and (minimum 1 capital letter), numbers and symbols",
+            	"Type"        : "String",
+            	"MinLength"   : "8",
+            	"MaxLength"   : "32",
+            	"AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
+            	"NoEcho"         : "true"
+        },
 		"VPCCIDR": {
 			"Description": "CIDR Block for the VPC",
 			"Type": "String",
