--- a/templates/Ansible-Tower-QuickStart.template
+++ b/templates/Ansible-Tower-QuickStart.template
@@ -13,7 +13,7 @@
 	    "Default": "10.0.0.10"
 	},
         "AnsibleAdminPassword": {
-            "Description" : "Password for Ansible Admin Must be at least 8 characters containing letters, numbers and symbols",
+            "Description" : "Password for Ansible Admin Must be at least 8 characters containing letters and (minimum 1 capital letter), numbers and symbols",
             "Type"        : "String",
             "MinLength"   : "8",
             "MaxLength"   : "32",
@@ -21,7 +21,7 @@
             "NoEcho"         : "true"
         },
         "DatabaseAdminPassword": {
-            "Description" : "Password for Database Admin Must be at least 8 characters containing letters, numbers and symbols",
+            "Description" : "Password for Ansible Admin Must be at least 8 characters containing letters and (minimum 1 capital letter), numbers and symbols",
             "Type"        : "String",
             "MinLength"   : "8",
             "MaxLength"   : "32",
