added ref for ec2stack to pass data

--- a/templates/Ansible-Tower-QuickStart.template
+++ b/templates/Ansible-Tower-QuickStart.template
@@ -93,6 +93,12 @@
                     "RemoteAdminCIDR" : {
                         "Ref" : "RemoteAdminCIDR"
                     },
+                    "AnsibleAdminPassword" : {
+                        "Ref" : "AnsibleAdminPassword"
+                    },
+                    "DatabaseAdminPassword" : {
+                        "Ref" : "DatabaseAdminPassword"
+                    },
                     "AnsibleTowerIP" : {
                         "Ref" : "AnsibleTowerIP"
                     },
