--- a/ci/ci-config.yml
+++ b/ci/ci-config.yml
@@ -17,8 +17,5 @@ global:
  
 tests:
   qs_ansiblet1:
-    template_file: qs_ansible-example1.template
-    parameter_input: qs_ansible-exampleparms1.json
-  qs_ansiblet2:
-    template_file: qs_ansible-example2.template
-    parameter_input: qs_ansible-exampleparms2.json
+    template_file: Ansible-Tower-QuickStart.template
+    parameter_input: Ansible-Tower-QuickStart.json
