Added support for NE2 ami-c74789a9

--- a/templates/Ansible-Tower-Ec2.template
+++ b/templates/Ansible-Tower-Ec2.template
@@ -76,6 +76,9 @@
 			"ap-northeast-1": {
 				"64": "ami-eec1c380"
 			},
+			"ap-northeast-2": {
+				"64": "ami-c74789a9"
+			},
 			"sa-east-1": {
 				"64": "ami-26b93b4a"
 			},
