Added ec2 tools to userdata and commented userdata file

--- a/templates/Ansible-Tower-Ec2.template
+++ b/templates/Ansible-Tower-Ec2.template
@@ -262,7 +262,7 @@
 				}],
 				"Tags": [{
 					"Key": "Name",
-					"Value": "LinuxClient"
+					"Value": "Ansible"
 				}],
 				"KeyName": {
 					"Ref": "KeyPairName"
