--- a/scripts/ansible_inventory/ec2.ini
+++ b/scripts/ansible_inventory/ec2.ini
@@ -27,12 +27,12 @@ regions_exclude = us-gov-west-1,cn-north-1
 # address, and should set this to 'private_dns_name'. The key of an EC2 tag
 # may optionally be used; however the boto instance variables hold precedence
 # in the event of a collision.
-destination_variable = public_dns_name
+destination_variable = private_dns_name
 
 # This allows you to override the inventory_name with an ec2 variable, instead
 # of using the destination_variable above. Addressing (aka ansible_ssh_host)
 # will still use destination_variable. Tags should be written as 'tag_TAGNAME'.
-hostname_variable = tag_Name_Ansible
+hostname_variable = tag_Ansible_Managed
 
 # For server inside a VPC, using DNS names may not make sense. When an instance
 # has 'subnet_id' set, this variable is used. If the subnet is public, setting
@@ -42,8 +42,8 @@ hostname_variable = tag_Name_Ansible
 # the boto instance variables hold precedence in the event of a collision.
 # WARNING: - instances that are in the private vpc, _without_ public ip address
 # will not be listed in the inventory until You set:
-# vpc_destination_variable = private_ip_address
-vpc_destination_variable = ip_address
+vpc_destination_variable = private_ip_address
+#vpc_destination_variable = ip_address
 
 # The following two settings allow flexible ansible host naming based on a
 # python format string and a comma-separated list of ec2 tags.  Note that:
