--- a/templates/Ansible-Tower-Ec2.template
+++ b/templates/Ansible-Tower-Ec2.template
@@ -306,21 +306,28 @@
 					"CidrIp": {
 						"Ref": "RemoteAdminCIDR"
 					}
-				}, {
+				},{
 					"IpProtocol": "tcp",
 					"FromPort": "22",
 					"ToPort": "22",
 					"CidrIp": {
 						"Ref": "VPCCIDR"
 					}
-				}, {
+				},{
 					"IpProtocol": "tcp",
 					"FromPort": "443",
 					"ToPort": "443",
 					"CidrIp": {
 						"Ref": "RemoteAdminCIDR"
 					}
-				}, {
+				},{
+                                        "IpProtocol": "tcp",
+                                        "FromPort": "8080",
+                                        "ToPort": "8080",
+                                        "CidrIp": {
+                                                "Ref": "RemoteAdminCIDR"
+                                        }
+                                },{
 					"IpProtocol": "tcp",
 					"FromPort": "80",
 					"ToPort": "80",
