--- a/templates/Ansible-Tower-CentOS-QuickStart.template
+++ b/templates/Ansible-Tower-CentOS-QuickStart.template
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion" : "2010-09-09",
-        "Description": "(0022) Creates Ansible Tower on Redhat Distro with Clients Tagged for Mangement",
+        "Description": "(0022) Creates Ansible Tower on CentOS7 with Clients Tagged for Mangement",
     "Parameters"               : {
         "KeyPairName" : {
             "Description" : "Public/private key pair",
@@ -12,31 +12,22 @@
 	    "Type": "String",
 	    "Default": "10.0.0.10"
 	},
-    "AnsibleAdminPassword": {
+        "AnsibleAdminPassword": {
             "Description" : "Password for Ansible Admin Must be at least 8 characters containing letters and (minimum 1 capital letter), numbers and symbols",
             "Type"        : "String",
             "MinLength"   : "8",
             "MaxLength"   : "32",
             "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
             "NoEcho"         : "true"
-    },
-    "DatabaseAdminPassword": {
+        },
+        "DatabaseAdminPassword": {
             "Description" : "Password for Ansible Admin Must be at least 8 characters containing letters and (minimum 1 capital letter), numbers and symbols",
             "Type"        : "String",
             "MinLength"   : "8",
             "MaxLength"   : "32",
             "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
             "NoEcho"         : "true"
-    },
-    "Distro": {
-            "Description": "OS Distro",
-            "AllowedValues" : [
-                "CentOS7",
-                "RHEL7"
-            ],
-            "Type"   : "String",
-            "Default": "RHEL7"
-    },
+        },
 	"AnsibleClientLinuxIP": {
 	    "Description": "IP for the ansible client",
 	    "Type": "String",
@@ -47,58 +38,6 @@
             "Type"        : "String",
             "Default"     : "10.0.0.0/19",
             "AllowedPattern" : "[a-zA-Z0-9]+\\..+"
-        },
-	"AnsibleTowerInstanceType": {
-            "Description": "Amazon EC2 instance type for the Config Server",
-            "Type": "String",
-            "Default": "t2.medium",
-            "AllowedValues": [
-                "t2.medium",
-                "m3.medium",
-                "m3.large",
-                "m3.xlarge",
-                "m3.2xlarge",
-                "c3.large",
-                "c3.xlarge",
-                "c3.2xlarge",
-                "c3.4xlarge",
-                "c3.8xlarge",
-                "r3.large",
-                "r3.xlarge",
-                "r3.2xlarge",
-                "r3.4xlarge",
-                "r3.8xlarge",
-                "i2.xlarge",
-                "i2.2xlarge",
-                "i2.4xlarge",
-                "i2.8xlarge"
-            ]
-        },
-        "LinuxClientInstanceType": {
-            "Description": "Amazon EC2 instance type for the Linux nodes.",
-            "Type": "String",
-            "Default": "m3.medium",
-            "AllowedValues": [
-                "t2.micro",
-                "m3.medium",
-                "m3.large",
-                "m3.xlarge",
-                "m3.2xlarge",
-                "c3.large",
-                "c3.xlarge",
-                "c3.2xlarge",
-                "c3.4xlarge",
-                "c3.8xlarge",
-                "r3.large",
-                "r3.xlarge",
-                "r3.2xlarge",
-                "r3.4xlarge",
-                "r3.8xlarge",
-                "i2.xlarge",
-                "i2.2xlarge",
-                "i2.4xlarge",
-                "i2.8xlarge"
-            ]
         },
         "RemoteAdminCIDR" : {
             "Description" : "CIDR Block or IP for SSH",
@@ -135,7 +74,7 @@
             "Type" : "AWS::CloudFormation::Stack",
 	    "DependsOn" :"VPCStack",
             "Properties" : {
-                "TemplateURL" : "https://s3.amazonaws.com/quickstart-reference/ansible/latest/templates/Ansible-Tower-Ec2-CentOS-RHEL.template",
+                "TemplateURL" : "https://s3.amazonaws.com/quickstart-reference/ansible/latest/templates/Ansible-Tower-Ec2.template",
                 "Parameters"  : {
                     "KeyPairName" : {
                         "Ref" : "KeyPairName"
