--- a/templates/RHEL/Ansible-Tower-el7-Ec2.template
+++ b/templates/RHEL/Ansible-Tower-el7-Ec2.template
@@ -46,6 +46,58 @@
 			"Type": "String",
 			"Default": "172.31.0.11"
 		},
+	"AnsibleTowerInstanceType": {
+            "Description": "Amazon EC2 instance type for the Config Server",
+            "Type": "String",
+            "Default": "t2.medium",
+            "AllowedValues": [
+                "t2.medium",
+                "m3.medium",
+                "m3.large",
+                "m3.xlarge",
+                "m3.2xlarge",
+                "c3.large",
+                "c3.xlarge",
+                "c3.2xlarge",
+                "c3.4xlarge",
+                "c3.8xlarge",
+                "r3.large",
+                "r3.xlarge",
+                "r3.2xlarge",
+                "r3.4xlarge",
+                "r3.8xlarge",
+                "i2.xlarge",
+                "i2.2xlarge",
+                "i2.4xlarge",
+                "i2.8xlarge"
+            ]
+        },
+        "LinuxClientInstanceType": {
+            "Description": "Amazon EC2 instance type for the Linux nodes.",
+            "Type": "String",
+            "Default": "m3.medium",
+            "AllowedValues": [
+                "t2.micro",
+                "m3.medium",
+                "m3.large",
+                "m3.xlarge",
+                "m3.2xlarge",
+                "c3.large",
+                "c3.xlarge",
+                "c3.2xlarge",
+                "c3.4xlarge",
+                "c3.8xlarge",
+                "r3.large",
+                "r3.xlarge",
+                "r3.2xlarge",
+                "r3.4xlarge",
+                "r3.8xlarge",
+                "i2.xlarge",
+                "i2.2xlarge",
+                "i2.4xlarge",
+                "i2.8xlarge"
+            ]
+        },
 		"VPCCIDR": {
 			"Description": "CIDR Block for the VPC",
 			"Type": "String",
@@ -54,7 +106,7 @@
 		}
 	},
 	"Mappings": {
-		"CentOS7": {
+		"RHEL7": {
 			"us-east-1": {
 				"64": "ami-6d1c2007"
 			},
@@ -134,13 +186,13 @@
 			"Properties": {
 				"ImageId": {
 					"Fn::FindInMap": [
-						"CentOS7", {
+						"RHEL7", {
 							"Ref": "AWS::Region"
 						},
 						"64"
 					]
 				},
-				"InstanceType": "t2.medium",
+				"InstanceType": {"Ref": "AnsibleTowerInstanceType"},
 				"NetworkInterfaces": [{
 					"DeleteOnTermination": "true",
 					"DeviceIndex": 0,
@@ -245,13 +297,13 @@
 			"Properties": {
 				"ImageId": {
 					"Fn::FindInMap": [
-						"CentOS7", {
+						"RHEL7", {
 							"Ref": "AWS::Region"
 						},
 						"64"
 					]
 				},
-				"InstanceType": "t2.medium",
+				"InstanceType": {"Ref": "LinuxClientInstanceType"},
 				"NetworkInterfaces": [{
 					"DeleteOnTermination": "true",
 					"DeviceIndex": 0,
