use epel from s3 and set hostname using hostnamectl

--- a/templates/RHEL/Ansible-Tower-el7-Ec2.template
+++ b/templates/RHEL/Ansible-Tower-el7-Ec2.template
@@ -236,8 +236,8 @@
 						"Fn::Join": [
 							"", [
 								"#!/bin/bash\n",
-                                                                "hostname ansibletower",
-								"yum install -y epel-release\n",
+                                                                "hostnamectl set-hostname ansibletower",
+								"yum install -y https://s3.amazonaws.com/quickstart-cfn-tools/extrapkgs-7.noarch.rpm\n",
 								"yum install -y python-daemon\n",
 								"yum install -y pystache.noarch\n",
 								"yum install -y python-ecdsa\n",
