--- a/templates/RHEL/Ansible-Tower-el7-Ec2.template
+++ b/templates/RHEL/Ansible-Tower-el7-Ec2.template
@@ -240,7 +240,7 @@
                                 "yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm\n",
                                 "yum install -y python-setuptools\n",
                                 "yum install -y python-daemon\n",
-								"yum install -y pystache.noarch\n",
+								"yum install -y pystache\n",
 								"yum install -y python-ecdsa\n",
 								"yum install -y python-paramiko\n",
 								"yum install -y python-keyczar\n",
