changed name to new format

--- a/ci/config.yml
+++ b/ci/config.yml
@@ -1,6 +1,5 @@
 global:
-  qsname: qs_ansible
-  qsenv: dev
+  qsname: quickstart-ansible
   reporting: true
   cis3bucket: s3://quickstart-ci-bucket
   regions:
