--- a/ci/config.yml
+++ b/ci/config.yml
@@ -14,9 +14,9 @@ global:
     - ap-southeast-2
     - ap-northeast-2
 tests:
-  ansible-centos:
+  centos:
     template_file: Ansible-Tower-QuickStart.template
     parameter_input: Ansible-Tower-QuickStart.json
-  ansible-rhel:
+  rhel:
     template_file: Ansible-Tower-el7-QuickStart.template
     parameter_input: Ansible-Tower-el7-QuickStart.json
