--- a/ci/config.yml
+++ b/ci/config.yml
@@ -1,23 +1,23 @@
 global:
   qsname: quickstart-ansible
   reporting: true
+  cis3bucket: s3://quickstart-ci-bucket
   regions:
     - us-east-1
     - us-west-1
     - eu-west-1
     - us-west-2
-    - sa-east-1
-    - eu-central-1
     - ap-northeast-1
     - ap-southeast-1
     - ap-southeast-2
     - ap-northeast-2
-  cis3bucket: s3://quickstart-ci-bucket
+    - sa-east-1
+    - eu-central-1
 
 tests:
-  c7:
+  centos:
     template_file: Ansible-Tower-c7-QuickStart.template
     parameter_input: Ansible-Tower-c7-QuickStart.json
-  el7:
+  rhel:
     template_file: Ansible-Tower-el7-QuickStart.template
     parameter_input: Ansible-Tower-el7-QuickStart.json
