--- a/templates/Ansible-Tower-el7-Ec2.template
+++ b/templates/Ansible-Tower-el7-Ec2.template
@@ -49,8 +49,10 @@
 	"AnsibleTowerInstanceType": {
             "Description": "Amazon EC2 instance type for the Config Server",
             "Type": "String",
-            "Default": "t2.medium",
+            "Default": "t2.small",
             "AllowedValues": [
+                "t2.micro",
+                "t2.small",
                 "t2.medium",
                 "m3.medium",
                 "m3.large",
@@ -75,9 +77,10 @@
         "LinuxClientInstanceType": {
             "Description": "Amazon EC2 instance type for the Linux nodes.",
             "Type": "String",
-            "Default": "t2.medium",
+            "Default": "t2.small",
             "AllowedValues": [
                 "t2.micro",
+                "t2.small",
                 "t2.medium",
                 "m3.medium",
                 "m3.large",
