--- a/templates/Ansible-Tower-el7-Ec2.template
+++ b/templates/Ansible-Tower-el7-Ec2.template
@@ -49,7 +49,7 @@
 	"AnsibleTowerInstanceType": {
             "Description": "Amazon EC2 instance type for the Config Server",
             "Type": "String",
-            "Default": "t2.small",
+            "Default": "t2.medium",
             "AllowedValues": [
                 "t2.micro",
                 "t2.small",
@@ -77,7 +77,7 @@
         "LinuxClientInstanceType": {
             "Description": "Amazon EC2 instance type for the Linux nodes.",
             "Type": "String",
-            "Default": "t2.small",
+            "Default": "t2.micro",
             "AllowedValues": [
                 "t2.micro",
                 "t2.small",
