--- a/ci/config.yml
+++ b/ci/config.yml
@@ -4,11 +4,20 @@ global:
   cis3bucket: s3://quickstart-ci-bucket
   regions:
     - us-east-1
-
+    - us-west-1
+    - eu-west-1
+    - us-west-2
+    - sa-east-1
+    - eu-central-1
+    - ap-northeast-1
+    - ap-southeast-1
+    - ap-southeast-2
+    - ap-northeast-2
+    
 tests:
   c7:
     template_file: Ansible-Tower-c7-QuickStart.template
     parameter_input: Ansible-Tower-c7-QuickStart.json
-  r7:
+  el7:
     template_file: Ansible-Tower-el7-QuickStart.template
     parameter_input: Ansible-Tower-el7-QuickStart.json
